fixed hand z-indexing problems and other homepage issues
git-svn-id: http://svn.localprojects.net/gam2/trunk@1151 befef031-aaeb-48d0-b70f-681328309d3d

--- a/static/css/tc.gam.main.css
+++ b/static/css/tc.gam.main.css
@@ -1261,7 +1261,7 @@ div.invite-user .submit { margin:10px 0 0; }
 .continent.home .splash .splash-inner { float:left; width: 960px; height: 100%; position:relative; z-index:98; }
 .continent.home .splash .splash-inner.first { margin-right:300px; }
 .continent.home .splash .photocredit { 
-	position: absolute; top: 612px; left: 654px; filter:alpha(opacity=40); -moz-opacity:0.4; -khtml-opacity: 0.4; opacity: 0.4;
+	position: absolute; top: 612px; left: 570px; filter:alpha(opacity=40); -moz-opacity:0.4; -khtml-opacity: 0.4; opacity: 0.4;
 	font-size: 10px; line-height: 1; color: #F3F2F0;}
 
 .continent.home .top-pane {
@@ -1350,17 +1350,12 @@ div.invite-user .submit { margin:10px 0 0; }
 .continent.home div.project-cards .small-note.e2 { background-position: -45px -180px;}
 .continent.home div.project-cards .small-note.e3 { background-position: -90px -180px;}
 
-.continent.home .note-card-pane { position: absolute; bottom: 0; right: 0px; width: 352px; height: 600px; background: url(../images/notecard_sprite_sm.png) 0px 0px no-repeat transparent; z-index: 100; font: 15px/19px "ff-meta-serif-web-pro-1","ff-meta-serif-web-pro-2", Georgia, Times, Times New Roman, serif; color: #3d3a36; }
+.continent.home .note-card-pane { position: absolute; bottom: 400px; right: 0px; width: 352px; height: 200px; background: url(../images/notecard_sprite_sm.png) 0px 0px no-repeat transparent; z-index: 100; font: 15px/19px "ff-meta-serif-web-pro-1","ff-meta-serif-web-pro-2", Georgia, Times, Times New Roman, serif; color: #3d3a36; }
 .continent.home .note-card-pane.color1 { background-position: 0px 0px; }
 .continent.home .note-card-pane.color2 { background-position: -366px 0px; }
 .continent.home .note-card-pane.color3 { background-position: -732px 0px; }
 .continent.home .note-card-pane.color4 { background-position: -1098px 0px; }
 .continent.home .note-card-pane.color5 { background-position: -1464px 0px; }
-.continent.home .note-card-pane .hand { position: absolute; top: 133px; left: 19px; width: 366px; height: 609px; background: url(../images/bg_hand_sprite_sm.png) 0px 0px no-repeat transparent; display: none; z-index: 3; } /* set to display:block with JS */
-.continent.home .note-card-pane .hand.hand1 { background-position: 0px 0px; }
-.continent.home .note-card-pane .hand.hand2 { background-position: -366px 0px; }
-.continent.home .note-card-pane .hand.hand3 { background-position: -732px 0px; }
-.continent.home .note-card-pane .hand.hand4 { background-position: -1098px 0px; }
 .continent.home .note-card-pane div.membrane { position: relative; }
 .continent.home .note-card-pane div.membrane div.note-card-splash,
 .continent.home .note-card-pane .note-card-submit-idea { position: absolute; top: 17px; left: 19px; width: 160px; height: 160px; }
@@ -1377,6 +1372,11 @@ div.invite-user .submit { margin:10px 0 0; }
 	font-family: "ff-meta-serif-web-pro-1","ff-meta-serif-web-pro-2", Georgia, Times, Times New Roman, serif;
 	-webkit-box-shadow: none; -moz-box-shadow: none; box-shadow: none; }
 .continent.home .note-card-pane .note-card-submit-idea .charlimit { position: absolute; top: 175px; left: 0; filter:alpha(opacity=65); -moz-opacity:0.65; -khtml-opacity: 0.65; opacity: 0.65; color: #55504b; margin: 0; }
+
+.continent.home .hand { position: absolute; bottom: 0px; right: 0px; width: 245px; height: 472px; background: url(../images/bg_hand1.png) top left no-repeat transparent; display: none; z-index: 101; } /* set to display:block with JS */
+.continent.home .hand.hand1 { background-image: url(../images/bg_hand1.png) }
+.continent.home .hand.hand2 { background-image: url(../images/bg_hand2.png) }
+.continent.home .hand.hand3 { background-image: url(../images/bg_hand3.png) }
 
 	/* step three stuff */
 .continent.home .top-pane.step-three { padding-top:25px; padding-bottom: 25px; }
@@ -1443,7 +1443,7 @@ div.invite-user .submit { margin:10px 0 0; }
 	background: url(../images/control_backArrow_9_light.png) center right no-repeat; position: relative; top: -2px;}
 .continent.home .midlands .box.box-leaderboard h3 a.leaderboard-link:hover { text-decoration: underline; }
 .continent.home .midlands ol.leaderboard { width: 960px; }
-.continent.home .midlands ol.leaderboard li { display: block; float: left; border-top: 1px solid #e5e5e3; }
+.continent.home .midlands ol.leaderboard li { display: block; float: left; border-top: 1px solid #e5e5e3; min-height: 118px;}
 .continent.home .midlands ol.leaderboard li.every-other { border-left: 1px solid #e5e5e3; }
 .continent.home .midlands ol.leaderboard li table { width: 479px; max-width: 479px; border-collapse: collapse;}
 .continent.home .midlands ol.leaderboard li table td { padding: 9px 0; margin: 0; background-color: transparent; border: none; border-collapse: collapse; }
@@ -1456,7 +1456,7 @@ div.invite-user .submit { margin:10px 0 0; }
 .continent.home .midlands ol.leaderboard li table td.project-header .thumb img { width: 70px; height: 70px; }
 .continent.home .midlands ol.leaderboard li table td.score { width: 99px; text-align: center; font-size: 18px; padding-top: 25px;
 	background: url(../images/bg_leaderboard-ribbon.png) top center no-repeat;  }
-.continent.home .midlands ol.leaderboard li.clearrow { display:block; height:0; clear:both; width:100% !important; border:none !important }
+.continent.home .midlands ol.leaderboard li.clearrow { display:block; height:0; clear:both; width:100% !important; border:none !important; float: none; min-height: 0 !important;}
 
 .continent.home .midlands .box.box-whoslistening { padding-top: 25px;  border-bottom: 1px solid #e5e5e3; }
 .continent.home .midlands .box.box-whoslistening h2 { width: 95%; }
